<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="77dp"
        android:layout_height="70dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="38dp"
        android:layout_height="39dp"
        android:layout_marginStart="356dp"
        android:layout_marginBottom="676dp"
        android:contentDescription="@string/config"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/roldana" />

    <Button
        android:id="@+id/buttonRecipes"
        android:layout_width="201dp"
        android:layout_height="57dp"
        android:text="@string/recipes"
        android:textColor="#ffffff"
        app:backgroundTint="#629c44"
        app:iconTint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <Button
        android:id="@+id/buttonList"
        android:layout_width="201dp"
        android:layout_height="57dp"
        android:text="@string/list"
        android:textColor="#629c44"
        app:backgroundTint="#ffffff"
        app:iconTint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />


</menu>